// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With session 1`] = `
<div>
  <header
    class="Header"
  >
    <nav
      class="navbar navbar-expand-md navbar-light"
    >
      <div
        class="container"
      >
        <a
          class="active navbar-brand"
          href="/"
          title="electronic Babylonian Literature (eBL)"
        >
          <h1
            class="Header__title"
          >
            <span
              class="Header__title-main"
            >
              electronic
              <br />
              Babylonian
              <br />
              Literature
            </span>
            <small
              class="Header__title-abbreviation"
            >
              eBL
            </small>
          </h1>
        </a>
        <div
          class="navbar-collapse collapse"
          id="Header-1"
        >
          <div
            class="mx-auto navbar-nav"
          >
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/dictionary"
                href="/dictionary"
              >
                Dictionary
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="active nav-link"
                data-rb-event-key="/corpus"
                href="/corpus"
              >
                Corpus
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/fragmentarium"
                href="/fragmentarium"
              >
                Fragmentarium
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/bibliography"
                href="/bibliography"
              >
                Bibliography
              </a>
            </div>
          </div>
          <span
            class="navbar-text"
          >
            <button
              class="btn btn-outline-secondary btn-sm"
              type="button"
            >
              Logout 
              Test
            </button>
          </span>
        </div>
        <button
          aria-controls="Header-1"
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
      </div>
    </nav>
  </header>
  <section
    class="App-content"
  >
    <header
      class="App-content__header"
    >
      <nav
        aria-label="breadcrumb"
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item active"
          >
            <a
              href="/"
            >
              eBL
            </a>
          </li>
          <li
            aria-current="page"
            class="breadcrumb-item active"
          >
            Corpus
          </li>
        </ol>
      </nav>
      <div
        class="float-right btn-toolbar"
        role="toolbar"
      />
      <h2>
        Corpus
      </h2>
    </header>
    <div
      class="container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="col-md-5"
        >
          <section>
            <h3 />
            <ol
              class="container-fluid"
            />
          </section>
          <section>
            <h3>
              I. Narrative Poetry
            </h3>
            <ol
              class="container-fluid"
            >
              <li
                class="row"
              >
                <div
                  class="col-md-8"
                >
                  <a
                    href="/corpus/1/1"
                  >
                    1
                    . 
                    First Category 1
                  </a>
                </div>
                <div
                  class="col-md-4"
                >
                  
                  99
                   vv.
                </div>
              </li>
              <li
                class="row"
              >
                <div
                  class="col-md-8"
                >
                  <a
                    href="/corpus/1/2"
                  >
                    2
                    . 
                    First Category 2
                  </a>
                </div>
                <div
                  class="col-md-4"
                >
                  
                  99
                   vv.
                </div>
              </li>
            </ol>
          </section>
          <section>
            <h3>
              II. Monologue and dialogue literature
            </h3>
            <ol
              class="container-fluid"
            >
              <li
                class="row"
              >
                <div
                  class="col-md-8"
                >
                  <a
                    href="/corpus/2/1"
                  >
                    1
                    . 
                    Second Category
                  </a>
                </div>
                <div
                  class="col-md-4"
                >
                  
                  2
                   vv.
                </div>
              </li>
            </ol>
          </section>
          <section>
            <h3>
              III. Literary Hymns and Prayers
            </h3>
            <ol
              class="container-fluid"
            >
              <li
                class="row"
              >
                <div
                  class="col-md-8"
                >
                  <a
                    href="/corpus/3/1"
                  >
                    1
                    . 
                    Third Category
                  </a>
                </div>
                <div
                  class="col-md-4"
                >
                  ±
                  45
                   vv.
                </div>
              </li>
            </ol>
          </section>
        </div>
        <div
          class="col-md-7"
        >
          <img
            alt="LibraryCropped.svg"
            class="img-fluid"
            src="http://example.com/images/LibraryCropped.svg"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Without session 1`] = `
<div>
  <header
    class="Header"
  >
    <nav
      class="navbar navbar-expand-md navbar-light"
    >
      <div
        class="container"
      >
        <a
          class="active navbar-brand"
          href="/"
          title="electronic Babylonian Literature (eBL)"
        >
          <h1
            class="Header__title"
          >
            <span
              class="Header__title-main"
            >
              electronic
              <br />
              Babylonian
              <br />
              Literature
            </span>
            <small
              class="Header__title-abbreviation"
            >
              eBL
            </small>
          </h1>
        </a>
        <div
          class="navbar-collapse collapse"
          id="Header-2"
        >
          <div
            class="mx-auto navbar-nav"
          >
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/dictionary"
                href="/dictionary"
              >
                Dictionary
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="active nav-link"
                data-rb-event-key="/corpus"
                href="/corpus"
              >
                Corpus
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/fragmentarium"
                href="/fragmentarium"
              >
                Fragmentarium
              </a>
            </div>
            <div
              class="nav-item"
            >
              <a
                class="nav-link"
                data-rb-event-key="/bibliography"
                href="/bibliography"
              >
                Bibliography
              </a>
            </div>
          </div>
          <span
            class="navbar-text"
          >
            <button
              class="btn btn-outline-secondary btn-sm"
              type="button"
            >
              Login
            </button>
          </span>
        </div>
        <button
          aria-controls="Header-2"
          aria-label="Toggle navigation"
          class="navbar-toggler collapsed"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
      </div>
    </nav>
  </header>
  <section
    class="App-content"
  >
    <header
      class="App-content__header"
    >
      <nav
        aria-label="breadcrumb"
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item active"
          >
            <a
              href="/"
            >
              eBL
            </a>
          </li>
          <li
            aria-current="page"
            class="breadcrumb-item active"
          >
            Corpus
          </li>
        </ol>
      </nav>
      <div
        class="float-right btn-toolbar"
        role="toolbar"
      />
      <h2>
        Corpus
      </h2>
    </header>
    <div
      class="container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="col-md-5"
        >
          <section>
            <h3 />
            <ol
              class="container-fluid"
            />
          </section>
          <section>
            <h3>
              I. Narrative Poetry
            </h3>
            <ol
              class="container-fluid"
            >
              <li
                class="row"
              >
                <div
                  class="col-md-8"
                >
                  1
                  . 
                  First Category 1
                </div>
                <div
                  class="col-md-4"
                >
                  
                  99
                   vv.
                </div>
              </li>
              <li
                class="row"
              >
                <div
                  class="col-md-8"
                >
                  2
                  . 
                  First Category 2
                </div>
                <div
                  class="col-md-4"
                >
                  
                  99
                   vv.
                </div>
              </li>
            </ol>
          </section>
          <section>
            <h3>
              II. Monologue and dialogue literature
            </h3>
            <ol
              class="container-fluid"
            >
              <li
                class="row"
              >
                <div
                  class="col-md-8"
                >
                  1
                  . 
                  Second Category
                </div>
                <div
                  class="col-md-4"
                >
                  
                  2
                   vv.
                </div>
              </li>
            </ol>
          </section>
          <section>
            <h3>
              III. Literary Hymns and Prayers
            </h3>
            <ol
              class="container-fluid"
            >
              <li
                class="row"
              >
                <div
                  class="col-md-8"
                >
                  1
                  . 
                  Third Category
                </div>
                <div
                  class="col-md-4"
                >
                  ±
                  45
                   vv.
                </div>
              </li>
            </ol>
          </section>
        </div>
        <div
          class="col-md-7"
        >
          <img
            alt="LibraryCropped.svg"
            class="img-fluid"
            src="http://example.com/images/LibraryCropped.svg"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;
